- BUG: Issue #170: svn url fomatting broken
       on 'switch'. (Stefan)
- BUG: Issue #171: Right-Click Refresh not working
       in Repo Browser correctly. (Stefan)
- NEW: Issue #172: Option to turn off
       case-fixing. (Stefan)
- BUG: Issue #174: applying patch fails
       with "path/path not found". (Stefan)
- BUG: Issue #175: Scroll to moved block
       doesn't work. (Stefan)

Version 1.7.3
- BUG: Issue #149: Crash in OpenSSL. (Stefan)
- BUG: Issue #150: Repobrowser: Don't show
       externals in checkout selection mode . (Stefan)
- BUG: Issue #152: log crashes with too
       many bugtrack links. (Stefan)
- BUG: Issue 155: crash when accessing a server with
       an invalid ssl certificate. (Stefan)
- BUG: Issue #156: subdir within WC not
       recognized as WC. (Stefan)
- BUG: Issue #157: Title Bar not updating with
       currently viewed repository. (Stefan)
- BUG: Issue #158: IBugTraqProvider2 CheckCommit
       returns a relative commonURL. (Stefan)
- BUG: Issue #159: folder browse dialog can be
       closed with invalid paths. (Stefan)
- BUG: Issue #160: Repo browser shows
       incorrect contents for directories
       that differ only by case. (Stefan)
- NEW: Issue #113: Option to turn off pre-fetching
       and external parsing in repo browser. (Stefan)
- BUG: Issue #161: repo browser shows invalid
       commands for the root. (Stefan)
- BUG: Line wrapping problems in Log
       Messages dialog. (Stefan)
- BUG: Issue #166: TortoiseMerge slow with
       long lines. (Stefan)

Version 1.7.2
- BUG: Issue #111: Crash in initializing
       the revision graph. (Stefan)
- CHG: Issue #112: Unescaped urls in
       switch dialog. (Stefan)
- BUG: Issue #115: non-existing folder
       shown in repo browser. (Stefan)
- BUG: Issue #110 (again): Bogus entries in
       Language Combo on x64. (Stefan)
- BUG: Issue #116: Language Packs don't
       have the dialog resources translated. (Stefan)
- BUG: Issue #117: Property name has