@@ -11,6 +11,8 @@ Version 1.7.4
        with "path/path not found". (Stefan)
 - BUG: Issue #175: Scroll to moved block
        doesn't work. (Stefan)
+- BUG: Issue #176: Diff settings "restore defaults"
+       doesn't work correctly. (Stefan)
 
 Version 1.7.3
 - BUG: Issue #149: Crash in OpenSSL. (Stefan)
